--- a/html/popup.html
+++ b/html/popup.html
@@ -48,19 +48,9 @@
                 </div>
             </section>
 
-            <!-- 対象テキスト選択 -->
+            <!-- 対象テキスト表示 -->
             <section class="target-section">
-                <h3>変換対象</h3>
-                <div class="target-options">
-                    <label class="target-option">
-                        <input type="radio" name="targetType" value="selection" checked>
-                        <span>選択テキスト</span>
-                    </label>
-                    <label class="target-option">
-                        <input type="radio" name="targetType" value="page">
-                        <span>ページ全体</span>
-                    </label>
-                </div>
+                <h3>変換対象：選択テキスト</h3>
             </section>
 
             <!-- 選択テキスト表示 -->
