--- a/html/options.html
+++ b/html/options.html
@@ -45,6 +45,20 @@
                         <div class="validation-status" id="validationStatus"></div>
                     </div>
                 </div>
+
+                <div class="setting-group">
+                    <label for="modelSelect" class="setting-label">
+                        使用モデル
+                    </label>
+                    <select id="modelSelect" class="setting-select">
+                        <option value="gemini-2.5-flash">Gemini 2.5 Flash (推奨)</option>
+                        <option value="gemini-1.5-flash">Gemini 1.5 Flash</option>
+                        <option value="gemini-1.5-pro">Gemini 1.5 Pro</option>
+                    </select>
+                    <div class="setting-description">
+                        <p>Gemini 2.5 Flashが最新で高性能です。用途に応じてモデルを選択してください。</p>
+                    </div>
+                </div>
             </section>
 
             <!-- 使用方法セクション -->
@@ -52,7 +66,7 @@
                 <h2>使用方法</h2>
                 <div class="usage-guide">
                     <ol>
-                        <li>上記でGemini APIキーを設定してください</li>
+                        <li>上記でGemini APIキーと使用モデルを設定してください</li>
                         <li>Webページでテキストを選択します</li>
                         <li>拡張機能アイコンをクリックしてポップアップを開きます</li>
                         <li>変換モードを選択して「変換実行」をクリックします</li>
