--- a/html/popup.html
+++ b/html/popup.html
@@ -21,29 +21,23 @@
             <!-- モード選択 -->
             <section class="mode-section">
                 <div class="mode-tabs">
-                    <button class="mode-tab active" data-mode="simplify">わかりやすく</button>
-                    <button class="mode-tab" data-mode="concretize">具体化</button>
-                    <button class="mode-tab" data-mode="abstract">抽象化</button>
-                    <button class="mode-tab" data-mode="grade">学年レベル</button>
+                    <button class="mode-tab active" data-mode="lexicon">語・記号の意味がわからない</button>
+                    <button class="mode-tab" data-mode="load">情報量が多すぎる</button>
+                    <button class="mode-tab" data-mode="cohesion">文と文の関係がわからない</button>
                 </div>
             </section>
 
-            <!-- 学年レベル選択（学年モード時のみ表示） -->
-            <section class="grade-section" id="gradeSection" style="display: none;">
-                <h3>学年レベル</h3>
-                <div class="grade-options">
-                    <label class="grade-option">
-                        <input type="radio" name="gradeLevel" value="elementary">
-                        <span>小学生</span>
-                    </label>
-                    <label class="grade-option">
-                        <input type="radio" name="gradeLevel" value="junior" checked>
-                        <span>中学生</span>
-                    </label>
-                    <label class="grade-option">
-                        <input type="radio" name="gradeLevel" value="senior">
-                        <span>高校生</span>
-                    </label>
+            <!-- 学年レベル選択 -->
+            <section class="grade-section" id="gradeSection">
+                <div class="grade-dropdown">
+                    <select id="gradeLevelSelect" name="gradeLevel">
+                        <option value="none">学年レベル: なし</option>
+                        <option value="university">学年レベル: 大学生</option>
+                        <option value="senior">学年レベル: 高校生</option>
+                        <option value="junior" selected>学年レベル: 中学生</option>
+                        <option value="elementary">学年レベル: 小学生</option>
+                        <option value="kindergarten">学年レベル: 幼稚園児</option>
+                    </select>
                 </div>
             </section>
 
