--- a/html/options.html
+++ b/html/options.html
@@ -51,13 +51,10 @@
                         使用モデル
                     </label>
                     <select id="modelSelect" class="setting-select">
-                        <option value="gemini-2.5-flash">Gemini 2.5 Flash (推奨)</option>
+                        <option value="gemini-2.5-flash">Gemini 2.5 Flash</option>
                         <option value="gemini-1.5-flash">Gemini 1.5 Flash</option>
                         <option value="gemini-1.5-pro">Gemini 1.5 Pro</option>
                     </select>
-                    <div class="setting-description">
-                        <p>Gemini 2.5 Flashが最新で高性能です。用途に応じてモデルを選択してください。</p>
-                    </div>
                 </div>
             </section>
 
