changed product name

--- a/html/options.html
+++ b/html/options.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text-Simpler 設定</title>
+    <title>ReadEasy. 設定</title>
     <link rel="stylesheet" href="../css/options.css">
 </head>
 
@@ -12,7 +12,7 @@
     <div class="options-container">
         <!-- ヘッダー -->
         <header class="options-header">
-            <h1>Text-Simpler 設定</h1>
+            <h1>ReadEasy. 設定</h1>
         </header>
 
         <!-- メインコンテンツ -->
